[package]
name = "web-sys-ec"
edition = "2021"
version = "0.1.0"
publish = true
readme = "README.md"
description = "Expected conditions in Selenium-like style for WASM targets using web-sys."
repository = "https://github.com/mondeja/web-sys-ec"
authors = ["Álvaro Mondéjar Rubio"]
license = "MIT"
keywords = ["wasm", "testing", "web-sys"]
categories = ["wasm"]

[dependencies]
js-sys = ">=0.3"
web-sys = { version = ">=0.3", features = [
  "Window",
  "Element",
  "HtmlElement",
  "Document",
  "HtmlCollection",
  "Storage",
  "Location",
] }
gloo-timers = { version = ">=0.3", features = ["futures"] }

[features]
default = []
nightly = []

[dev-dependencies]
wasm-bindgen-test = "0.3"
gloo-utils = "0.2"
web-sys = { version = "0.3", features = [
  "Window",
  "Element",
  "HtmlElement",
  "Document",
  "HtmlCollection",
  "Storage",
  "Location",
  "Url",
  "UrlSearchParams",
] }
